[tool.poetry]
name = "meerkat"
version = "0.1.0"
description = ""
authors = ["Anderson Bairo <ander_slash@yahoo.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
